[gd_scene load_steps=15 format=2]

[ext_resource path="res://HRM Control.tscn" type="PackedScene" id=1]
[ext_resource path="res://ScanGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Root.gd" type="Script" id=3]
[ext_resource path="res://HrmGraph.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/Indicator/1.png" type="Texture" id=5]
[ext_resource path="res://art/Indicator/4.png" type="Texture" id=6]
[ext_resource path="res://art/Indicator/2.png" type="Texture" id=7]
[ext_resource path="res://art/Indicator/6.png" type="Texture" id=8]
[ext_resource path="res://art/Indicator/3.png" type="Texture" id=9]
[ext_resource path="res://art/Indicator/8.png" type="Texture" id=10]
[ext_resource path="res://art/Indicator/7.png" type="Texture" id=11]
[ext_resource path="res://art/Indicator/5.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Root" type="Node2D"]
script = ExtResource( 3 )

[node name="HrmManager" parent="." instance=ExtResource( 1 )]

[node name="Screen" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Screen"]
margin_right = 600.0
margin_bottom = 600.0
color = Color( 0.878431, 0.878431, 0.878431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" type="Control" parent="Screen"]
margin_top = 3.05176e-05
margin_right = 600.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Screen/StartMenu"]
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.35
margin_left = -100.0
margin_right = 100.0
margin_bottom = 150.0
grow_horizontal = 2
rect_clip_content = false
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/bg = SubResource( 1 )
custom_colors/font_color_selected = Color( 0, 1, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
auto_height = true
same_column_width = true
fixed_column_width = 200
icon_mode = 0
fixed_icon_size = Vector2( 10, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton" type="Button" parent="Screen/StartMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.62
anchor_right = 0.5
anchor_bottom = 0.62
grow_horizontal = 2
disabled = true
text = "Select Device"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="Node2D" parent="Screen/StartMenu"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Screen/StartMenu/Indicator"]
frames = SubResource( 2 )
playing = true

[node name="ScanGUI" parent="Screen/StartMenu" instance=ExtResource( 2 )]

[node name="HrmGraph" parent="Screen" instance=ExtResource( 4 )]
visible = false

[node name="Positions" type="Node2D" parent="Screen"]

[node name="ScanPos" type="Position2D" parent="Screen/Positions"]
position = Vector2( 394, 185 )

[node name="ConnectPos" type="Position2D" parent="Screen/Positions"]
position = Vector2( 30, 30 )

[node name="ConnStatus" type="Label" parent="Screen"]
anchor_left = 0.08
anchor_top = 0.05
anchor_right = 0.08
anchor_bottom = 0.05
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Connection Status: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerStartUpTimer" type="Timer" parent="."]
one_shot = true
[connection signal="auth_end" from="HrmManager" to="." method="_on_auth_end"]
[connection signal="connected_to_server" from="HrmManager" to="." method="_on_client_ready"]
[connection signal="message_received" from="HrmManager" to="." method="_on_message_received"]
[connection signal="new_hr" from="HrmManager" to="." method="_on_new_hr"]
[connection signal="scan_end" from="HrmManager" to="." method="_on_scan_end"]
[connection signal="pressed" from="Screen/StartMenu/SelectButton" to="." method="_select_device"]
[connection signal="scan_start" from="Screen/StartMenu/ScanGUI" to="." method="_start_scan"]
[connection signal="timeout" from="ServerStartUpTimer" to="." method="_on_server_startup_timeout"]
